--- a/index.html
+++ b/index.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HP Exam Hub</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 text-gray-800">
-  <div class="text-center p-10">
-    <h1 class="text-4xl font-bold text-blue-600">HP Exam Hub</h1>
-    <p class="mt-4 text-lg">Your source for HP Government & University Exams</p>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HP Exam Hub – Previous Papers & Govt Notifications</title>
+    <link rel="icon" href="/assets/logo.png" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: 'Nunito', sans-serif;
+      }
+    </style>
+  </head>
+  <body class="bg-gray-100 text-gray-800">
+    <!-- Header -->
+    <header class="bg-blue-600 text-white shadow">
+      <div class="max-w-7xl mx-auto p-4 flex justify-between items-center">
+        <h1 class="text-2xl font-bold">HP Exam Hub</h1>
+        <nav class="space-x-4 text-sm sm:text-base">
+          <a href="/" class="hover:underline">Home</a>
+          <a href="/papers/previous-year.html" class="hover:underline">Papers</a>
+          <a href="/exams/entrance.html" class="hover:underline">Entrance</a>
+          <a href="/notifications/govt.html" class="hover:underline">Notifications</a>
+        </nav>
+      </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="bg-yellow-400 text-black py-10 text-center">
+      <h2 class="text-3xl sm:text-4xl font-bold mb-2">Crack HP Exams with Confidence</h2>
+      <p class="text-lg sm:text-xl">Get previous year papers, notifications & updates at one place.</p>
+    </section>
+
+    <!-- Main Content -->
+    <main class="max-w-6xl mx-auto p-4 grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+      <!-- Card Example -->
+      <div class="bg-white p-6 rounded-xl shadow hover:shadow-md transition">
+        <h3 class="text-xl font-semibold mb-2">Previous Year Papers</h3>
+        <p class="text-sm text-gray-600 mb-4">
+          Download solved and unsolved question papers for HPPSC, HP Police, and more.
+        </p>
+        <a href="/papers/previous-year.html" class="text-blue-600 hover:underline">View Papers →</a>
+      </div>
+
+      <div class="bg-white p-6 rounded-xl shadow hover:shadow-md transition">
+        <h3 class="text-xl font-semibold mb-2">Entrance Exams</h3>
+        <p class="text-sm text-gray-600 mb-4">
+          Access old entrance exam papers for B.Ed, JBT, BSc Nursing and others.
+        </p>
+        <a href="/exams/entrance.html" class="text-blue-600 hover:underline">View Exams →</a>
+      </div>
+
+      <div class="bg-white p-6 rounded-xl shadow hover:shadow-md transition">
+        <h3 class="text-xl font-semibold mb-2">Govt Notifications</h3>
+        <p class="text-sm text-gray-600 mb-4">
+          Stay updated with latest HP Govt job notifications and exam alerts.
+        </p>
+        <a href="/notifications/govt.html" class="text-blue-600 hover:underline">View Alerts →</a>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 text-white text-center py-4 mt-10">
+      <p>&copy; 2025 HP Exam Hub. Made for Himachal by Harsh.</p>
+    </footer>
+  </body>
 </html>
