--- a/notifications/govt.html
+++ b/notifications/govt.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Government Notifications – HP Exam Hub</title>
+  <link rel="icon" href="/assets/logo.png" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
+  <style>
+    body { font-family: 'Nunito', sans-serif; }
+  </style>
+</head>
+<body class="bg-gray-100 text-gray-800">
+
+  <!-- Header -->
+  <header class="bg-blue-600 text-white shadow">
+    <div class="max-w-7xl mx-auto p-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold">HP Exam Hub</h1>
+      <nav class="space-x-4 text-sm sm:text-base">
+        <a href="/" class="hover:underline">Home</a>
+        <a href="/papers/previous-year.html" class="hover:underline">Papers</a>
+        <a href="/exams/entrance.html" class="hover:underline">Entrance</a>
+        <a href="/notifications/govt.html" class="hover:underline">Notifications</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="max-w-4xl mx-auto p-6">
+    <h2 class="text-2xl font-bold mb-4">Govt Notifications</h2>
+    <p class="mb-4">Latest official notifications from HPPSC, HPSSSB, HPBOSE, and other govt bodies.</p>
+
+    <!-- Example list -->
+    <ul class="list-disc list-inside space-y-2">
+      <li><a href="#" class="text-blue-600 hover:underline">HPPSC Naib Tehsildar Notification (2025)</a></li>
+      <li><a href="#" class="text-blue-600 hover:underline">HPSSSB TGT Recruitment (2024)</a></li>
+      <li><a href="#" class="text-blue-600 hover:underline">HPBOSE JBT CET Admit Card (2025)</a></li>
+    </ul>
+  </main>
+
+  <footer class="bg-gray-800 text-white text-center py-4 mt-10">
+    <p>&copy; 2025 HP Exam Hub. Made for Himachal by Harsh.</p>
+  </footer>
+</body>
+</html>
 
