--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: 'Nunito', sans-serif;
-      }
-    </style>
+      <link rel="stylesheet" href="/assets/styles.css" />
   </head>
   <body class="bg-gray-100 text-gray-800">
     <!-- Header -->
