--- a/exams/entrance.html
+++ b/exams/entrance.html
@@ -40,7 +40,7 @@
   </main>
 
   <footer class="bg-gray-800 text-white text-center py-4 mt-10">
-    <p>&copy; 2025 HP Exam Hub. Made for Himachal by Harsh.</p>
+    <p>&copy; 2025 HP Exam Hub. Made for People of Himachal with Love</p>
   </footer>
 </body>
 </html>
