--- a/notifications/govt.html
+++ b/notifications/govt.html
@@ -6,10 +6,11 @@
   <title>Government Notifications – HP Exam Hub</title>
   <link rel="icon" href="/assets/logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
-  <style>
-    body { font-family: 'Nunito', sans-serif; }
-  </style>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body class="bg-gray-100 text-gray-800">
 
