--- a/papers/previous-year.html
+++ b/papers/previous-year.html
@@ -6,14 +6,10 @@
   <title>Previous Year Papers – HP Exam Hub</title>
   <link rel="icon" href="/assets/logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body class="bg-gray-100 text-gray-800">
-
   <!-- Header -->
   <header class="bg-blue-600 text-white shadow">
     <div class="max-w-7xl mx-auto p-4 flex justify-between items-center">
@@ -27,18 +23,21 @@
     </div>
   </header>
 
-  <main class="max-w-4xl mx-auto p-6">
-    <h2 class="text-2xl font-bold mb-4">Previous Year Papers</h2>
-    <p class="mb-4">Download PDFs of previous year question papers for various HP government exams.</p>
+  <!-- Page Heading -->
+  <section class="text-center py-10 bg-yellow-300">
+    <h2 class="text-3xl font-bold">Previous Year Question Papers</h2>
+    <p class="text-lg mt-2">Download past HP Govt exam papers to prepare better.</p>
+  </section>
 
-    <!-- Example list -->
-    <ul class="list-disc list-inside space-y-2">
-      <li><a href="#" class="text-blue-600 hover:underline">HPPSC Allied Services 2022</a></li>
-      <li><a href="#" class="text-blue-600 hover:underline">HP Police Constable 2021</a></li>
-      <li><a href="#" class="text-blue-600 hover:underline">HPSSSB Clerk 2020</a></li>
-    </ul>
+  <!-- Content Section -->
+  <main class="max-w-4xl mx-auto p-4">
+    <div class="bg-white shadow rounded-xl p-6">
+      <p class="text-gray-600 mb-4">Coming soon: Download links for HPPSC, HP Police, JOA IT, and more.</p>
+      <!-- Add actual PDF links or paper names here later -->
+    </div>
   </main>
 
+  <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-4 mt-10">
     <p>&copy; 2025 HP Exam Hub. Made for Himachal by Harsh.</p>
   </footer>
