--- a/papers/previous-year.html
+++ b/papers/previous-year.html
@@ -39,7 +39,7 @@
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-4 mt-10">
-    <p>&copy; 2025 HP Exam Hub. Made for Himachal by Harsh.</p>
+    <p>&copy; 2025 HP Exam Hub. Made for People of Himachal with Love</p>
   </footer>
 </body>
 </html>
