--- a/exams/entrance.html
+++ b/exams/entrance.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Entrance Papers – HP Exam Hub</title>
+  <title>Entrance Exam Papers – HP Exam Hub</title>
   <link rel="icon" href="/assets/logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body class="bg-gray-100 text-gray-800">
-
   <!-- Header -->
   <header class="bg-blue-600 text-white shadow">
     <div class="max-w-7xl mx-auto p-4 flex justify-between items-center">
@@ -27,21 +23,22 @@
     </div>
   </header>
 
-  <main class="max-w-4xl mx-auto p-6">
-    <h2 class="text-2xl font-bold mb-4">Entrance Exam Papers</h2>
-    <p class="mb-4">Download old entrance papers for B.Ed, JBT, BSc Nursing, and other university-level exams.</p>
+  <!-- Page Heading -->
+  <section class="text-center py-10 bg-green-300">
+    <h2 class="text-3xl font-bold">Entrance Exam Papers</h2>
+    <p class="text-lg mt-2">Download papers for B.Ed, JBT, BSc Nursing and other HP entrance exams.</p>
+  </section>
 
-    <!-- Example list -->
-    <ul class="list-disc list-inside space-y-2">
-      <li><a href="#" class="text-blue-600 hover:underline">HP B.Ed Entrance 2023</a></li>
-      <li><a href="#" class="text-blue-600 hover:underline">JBT CET 2022</a></li>
-      <li><a href="#" class="text-blue-600 hover:underline">BSc Nursing 2021</a></li>
-    </ul>
+  <!-- Content Section -->
+  <main class="max-w-4xl mx-auto p-4">
+    <div class="bg-white shadow rounded-xl p-6">
+      <p class="text-gray-600 mb-4">Coming soon: Papers from HP University, HPU B.Ed, JBT CET, BSc Nursing and more.</p>
+    </div>
   </main>
 
+  <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-4 mt-10">
-    <p>&copy; 2025 HP Exam Hub. Made for People of Himachal with Love</p>
+    <p>&copy; 2025 HP Exam Hub. Made for People of Himachal with Love.</p>
   </footer>
 </body>
 </html>
-
