--- a/notifications/govt.html
+++ b/notifications/govt.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Government Notifications – HP Exam Hub</title>
+  <title>Govt Job Notifications – HP Exam Hub</title>
   <link rel="icon" href="/assets/logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body class="bg-gray-100 text-gray-800">
-
   <!-- Header -->
   <header class="bg-blue-600 text-white shadow">
     <div class="max-w-7xl mx-auto p-4 flex justify-between items-center">
@@ -27,21 +23,22 @@
     </div>
   </header>
 
-  <main class="max-w-4xl mx-auto p-6">
-    <h2 class="text-2xl font-bold mb-4">Govt Notifications</h2>
-    <p class="mb-4">Latest official notifications from HPPSC, HPSSSB, HPBOSE, and other govt bodies.</p>
+  <!-- Page Heading -->
+  <section class="text-center py-10 bg-red-300">
+    <h2 class="text-3xl font-bold">HP Govt Job Notifications</h2>
+    <p class="text-lg mt-2">Get the latest Himachal Pradesh job alerts, exam dates and official news.</p>
+  </section>
 
-    <!-- Example list -->
-    <ul class="list-disc list-inside space-y-2">
-      <li><a href="#" class="text-blue-600 hover:underline">HPPSC Naib Tehsildar Notification (2025)</a></li>
-      <li><a href="#" class="text-blue-600 hover:underline">HPSSSB TGT Recruitment (2024)</a></li>
-      <li><a href="#" class="text-blue-600 hover:underline">HPBOSE JBT CET Admit Card (2025)</a></li>
-    </ul>
+  <!-- Content Section -->
+  <main class="max-w-4xl mx-auto p-4">
+    <div class="bg-white shadow rounded-xl p-6">
+      <p class="text-gray-600 mb-4">Coming soon: HPPSC, HPSSC, HP Forest, HP Police, HRTC and other updates.</p>
+    </div>
   </main>
 
+  <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-4 mt-10">
-    <p>&copy; 2025 HP Exam Hub. Made for Himachal by Harsh.</p>
+    <p>&copy; 2025 HP Exam Hub. Made for People of Himachal with love.</p>
   </footer>
 </body>
 </html>
-
