--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <h1 class="text-4xl sm:text-5xl font-bold mb-4">Empowering Himachal's Aspirants</h1>
         <p class="text-xl sm:text-2xl mb-6">Free resources for HP competitive exams - because education should be accessible to all</p>
         <div class="flex flex-wrap justify-center gap-4">
-          <a href="/papers/previous-year.html" class="bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-3 px-6 rounded-lg transition">Explore Papers</a>
-          <a href="/notifications/govt.html" class="bg-white hover:bg-gray-100 text-blue-800 font-bold py-3 px-6 rounded-lg transition">View Notifications</a>
+          <a href="/papers/previous-year.html" class="bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-3 px-6 rounded-lg transition">Exam Papers</a>
+          <a href="/notifications/govt.html" class="bg-white hover:bg-gray-100 text-blue-800 font-bold py-3 px-6 rounded-lg transition">Govt. Exam Notifications</a>
         </div>
       </div>
     </section>
