--- a/exams/entrance.html
+++ b/exams/entrance.html
@@ -1,44 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Entrance Exam Papers – HP Exam Hub</title>
-  <link rel="icon" href="/assets/logo.png" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/assets/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Free previous year entrance exam papers for HP B.Ed, JBT, BSc Nursing, and other professional courses in Himachal Pradesh - HP Exam Hub">
+    <meta name="keywords" content="HP entrance exams, Himachal B.Ed papers, JBT previous papers, HPU entrance, HP nursing entrance, free exam resources">
+    <title>HP Entrance Exam Papers | B.Ed, JBT, Nursing | HP Exam Hub</title>
+    <link rel="icon" href="/assets/logo.png">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
-<body class="bg-gray-100 text-gray-800">
-  <!-- Header -->
-  <header class="bg-blue-600 text-white shadow">
-    <div class="max-w-7xl mx-auto p-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">HP Exam Hub</h1>
-      <nav class="space-x-4 text-sm sm:text-base">
-        <a href="/" class="hover:underline">Home</a>
-        <a href="/papers/previous-year.html" class="hover:underline">Papers</a>
-        <a href="/exams/entrance.html" class="hover:underline">Entrance</a>
-        <a href="/notifications/govt.html" class="hover:underline">Notifications</a>
-      </nav>
-    </div>
-  </header>
+<body class="bg-gray-50">
+    <!-- Header -->
+    <header class="bg-blue-600 text-white shadow sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto p-4 flex flex-col sm:flex-row justify-between items-center">
+            <div class="header-logo mb-4 sm:mb-0">
+                <img src="/assets/logo.png" alt="HP Exam Hub Logo">
+                <h1 class="text-2xl font-bold">HP Exam Hub</h1>
+            </div>
+            <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 text-sm sm:text-base">
+                <a href="/" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Home</a>
+                <a href="/papers/previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Previous Papers</a>
+                <a href="/exams/entrance.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700 bg-blue-700">Entrance Exams</a>
+                <a href="/notifications/govt.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt Notifications</a>
+            </nav>
+        </div>
+    </header>
 
-  <!-- Page Heading -->
-  <section class="text-center py-10 bg-green-300">
-    <h2 class="text-3xl font-bold">Entrance Exam Papers</h2>
-    <p class="text-lg mt-2">Download papers for B.Ed, JBT, BSc Nursing and other HP entrance exams.</p>
-  </section>
+    <!-- Main Content -->
+    <main class="max-w-7xl mx-auto px-4 py-8">
+        <h1 class="main-heading">Entrance Exam Papers for Professional Courses</h1>
+        <p class="text-lg text-gray-700 mb-8">Access free previous year question papers for all major entrance exams conducted in Himachal Pradesh. Download PDFs to prepare for B.Ed, JBT, Nursing, and other professional course admissions.</p>
+        
+        <!-- Teaching Entrance Section -->
+        <section class="mb-12">
+            <h2 class="section-heading">Teaching Course Entrance Exams</h2>
+            <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- B.Ed Card -->
+                <div class="bg-white exam-card shadow rounded-lg overflow-hidden">
+                    <div class="p-6">
+                        <div class="flex items-center mb-4">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path d="M12 14l9-5-9-5-9 5 9 5z" />
+                                    <path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold">B.Ed Entrance</h3>
+                        </div>
+                        <div class="space-y-2 mb-4">
+                            <p class="text-sm text-gray-600"><span class="font-medium">Years:</span> 2015-2023</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Papers:</span> 8 Solved + 5 Unsolved</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Institutes:</span> HPU, IGMC, Private Colleges</p>
+                        </div>
+                        <a href="/exams/teaching/bed.html" class="btn-primary inline-block">Download Papers</a>
+                    </div>
+                </div>
 
-  <!-- Content Section -->
-  <main class="max-w-4xl mx-auto p-4">
-    <div class="bg-white shadow rounded-xl p-6">
-      <p class="text-gray-600 mb-4">Coming soon: Papers from HP University, HPU B.Ed, JBT CET, BSc Nursing and more.</p>
-    </div>
-  </main>
+                <!-- JBT Card -->
+                <div class="bg-white exam-card shadow rounded-lg overflow-hidden">
+                    <div class="p-6">
+                        <div class="flex items-center mb-4">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold">JBT/D.El.Ed</h3>
+                        </div>
+                        <div class="space-y-2 mb-4">
+                            <p class="text-sm text-gray-600"><span class="font-medium">Years:</span> 2012-2023</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Papers:</span> 10 Solved + 5 Unsolved</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Institutes:</span> All DIETs in HP</p>
+                        </div>
+                        <a href="/exams/teaching/jbt.html" class="btn-primary inline-block">Download Papers</a>
+                    </div>
+                </div>
 
-  <!-- Footer -->
-  <footer class="bg-gray-800 text-white text-center py-4 mt-10">
-    <p>&copy; 2025 HP Exam Hub. Made for People of Himachal with Love.</p>
-  </footer>
+                <!-- TGT/PGT Card -->
+                <div class="bg-white exam-card shadow rounded-lg overflow-hidden">
+                    <div class="p-6">
+                        <div class="flex items-center mb-4">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold">TGT/PGT Entrance</h3>
+                        </div>
+                        <div class="space-y-2 mb-4">
+                            <p class="text-sm text-gray-600"><span class="font-medium">Years:</span> 2014-2023</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Papers:</span> 7 Solved + 3 Unsolved</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Subjects:</span> All major subjects</p>
+                        </div>
+                        <a href="/exams/teaching/tgt-pgt.html" class="btn-primary inline-block">Download Papers</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Medical Entrance Section -->
+        <section class="mb-12">
+            <h2 class="section-heading">Medical & Paramedical Entrance Exams</h2>
+            <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- BSc Nursing Card -->
+                <div class="bg-white exam-card shadow rounded-lg overflow-hidden">
+                    <div class="p-6">
+                        <div class="flex items-center mb-4">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold">BSc Nursing</h3>
+                        </div>
+                        <div class="space-y-2 mb-4">
+                            <p class="text-sm text-gray-600"><span class="font-medium">Years:</span> 2016-2023</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Papers:</span> 6 Solved + 3 Unsolved</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Colleges:</span> IGMC, Tanda, Private</p>
+                        </div>
+                        <a href="/exams/medical/nursing.html" class="btn-primary inline-block">Download Papers</a>
+                    </div>
+                </div>
+
+                <!-- ANM/GNM Card -->
+                <div class="bg-white exam-card shadow rounded-lg overflow-hidden">
+                    <div class="p-6">
+                        <div class="flex items-center mb-4">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold">ANM/GNM</h3>
+                        </div>
+                        <div class="space-y-2 mb-4">
+                            <p class="text-sm text-gray-600"><span class="font-medium">Years:</span> 2014-2023</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Papers:</span> 8 Solved + 4 Unsolved</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Colleges:</span> All Govt Nursing Schools</p>
+                        </div>
+                        <a href="/exams/medical/anm-gnm.html" class="btn-primary inline-block">Download Papers</a>
+                    </div>
+                </div>
+
+                <!-- Paramedical Card -->
+                <div class="bg-white exam-card shadow rounded-lg overflow-hidden">
+                    <div class="p-6">
+                        <div class="flex items-center mb-4">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold">Paramedical Courses</h3>
+                        </div>
+                        <div class="space-y-2 mb-4">
+                            <p class="text-sm text-gray-600"><span class="font-medium">Years:</span> 2015-2023</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Papers:</span> 5 Solved + 2 Unsolved</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Courses:</span> Lab Tech, Radiography, etc.</p>
+                        </div>
+                        <a href="/exams/medical/paramedical.html" class="btn-primary inline-block">Download Papers</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Other Courses Section -->
+        <section>
+            <h2 class="section-heading">Other Professional Courses</h2>
+            <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- Polytechnic Card -->
+                <div class="bg-white exam-card shadow rounded-lg overflow-hidden">
+                    <div class="p-6">
+                        <div class="flex items-center mb-4">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold">Polytechnic</h3>
+                        </div>
+                        <div class="space-y-2 mb-4">
+                            <p class="text-sm text-gray-600"><span class="font-medium">Years:</span> 2013-2023</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Papers:</span> 7 Solved + 4 Unsolved</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Branches:</span> All engineering disciplines</p>
+                        </div>
+                        <a href="/exams/technical/polytechnic.html" class="btn-primary inline-block">Download Papers</a>
+                    </div>
+                </div>
+
+                <!-- Agriculture Card -->
+                <div class="bg-white exam-card shadow rounded-lg overflow-hidden">
+                    <div class="p-6">
+                        <div class="flex items-center mb-4">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 11.5V14m0-2.5v-6a1.5 1.5 0 113 0m-3 6a1.5 1.5 0 00-3 0v2a7.5 7.5 0 0015 0v-5a1.5 1.5 0 00-3 0m-6-3V11m0-5.5v-1a1.5 1.5 0 013 0v1m0 0V11m0-5.5a1.5 1.5 0 013 0v3m0 0V11" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold">Agriculture</h3>
+                        </div>
+                        <div class="space-y-2 mb-4">
+                            <p class="text-sm text-gray-600"><span class="font-medium">Years:</span> 2015-2023</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Papers:</span> 4 Solved + 2 Unsolved</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Courses:</span> BSc Agriculture, Horticulture</p>
+                        </div>
+                        <a href="/exams/agriculture/entrance.html" class="btn-primary inline-block">Download Papers</a>
+                    </div>
+                </div>
+
+                <!-- Other Courses Card -->
+                <div class="bg-white exam-card shadow rounded-lg overflow-hidden">
+                    <div class="p-6">
+                        <div class="flex items-center mb-4">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                                </svg>
+                            </div>
+                            <h3 class="text-xl font-semibold">Other Courses</h3>
+                        </div>
+                        <div class="space-y-2 mb-4">
+                            <p class="text-sm text-gray-600"><span class="font-medium">Years:</span> 2010-2023</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Papers:</span> 15+ Various Courses</p>
+                            <p class="text-sm text-gray-600"><span class="font-medium">Includes:</span> Law, Pharmacy, Hotel Mgmt</p>
+                        </div>
+                        <a href="/exams/other-courses.html" class="btn-primary inline-block">Download Papers</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white pt-8 pb-6">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="text-center">
+                <p class="mb-2">HP Exam Hub - Free Resources for Himachal Pradesh Competitive Exams</p>
+                <p class="text-gray-400 text-sm">&copy; 2025 HP Exam Hub. A Public Welfare Initiative.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
