new get job fast

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         </div>
         
         <div class="border-t border-gray-800 pt-6 text-center text-gray-400 text-sm">
-          <p>&copy; 2025 HP Exam Hub. A Public Welfare Initiative for Himachal Pradesh. All content is provided for educational purposes only.</p>
+          <p>&copy; 2025 HP Exam Hub. All content is provided for educational purposes only.</p>
           <div class="mt-2">
             <a href="/privacy.html" class="hover:text-white transition">Privacy Policy</a> | 
             <a href="/terms.html" class="hover:text-white transition">Terms of Use</a> | 
