--- a/notifications/govt.html
+++ b/notifications/govt.html
@@ -26,7 +26,8 @@
         </div>
         <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 text-sm sm:text-base">
           <a href="/" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Home</a>
-          <a href="/papers/previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Previous Papers</a>
+          <a href="/papers/previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt. Exam Papers</a>
+          <a href="/papers/college-previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">College Exam Papers</a>
           <a href="/exams/entrance.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Entrance Exams</a>
           <a href="/notifications/govt.html" class="bg-blue-700 px-2 py-1 rounded font-medium">Govt Notifications</a>
           <a href="/about.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">About Us</a>
@@ -567,12 +568,7 @@
         </div>
         
         <div class="border-t border-gray-800 pt-6 text-center text-gray-400 text-sm">
-          <p>&copy; 2025 HP Exam Hub. A Public Welfare Initiative for Himachal Pradesh. All content is provided for educational purposes only.</p>
-          <div class="mt-2">
-            <a href="/privacy.html" class="hover:text-white transition">Privacy Policy</a> | 
-            <a href="/terms.html" class="hover:text-white transition">Terms of Use</a> | 
-            <a href="/disclaimer.html" class="hover:text-white transition">Disclaimer</a>
-          </div>
+          <p>&copy; 2025 HP Exam Hub. All content is provided for educational purposes only.</p>
         </div>
       </div>
     </footer>
