--- a/papers/college/bsc-1-maths.html
+++ b/papers/college/bsc-1-maths.html
@@ -126,8 +126,18 @@
               <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                 <h4 class="font-medium mb-2">2022 Question Paper</h4>
                 <div class="flex justify-between items-center">
-                  <span class="text-sm text-gray-600">May 2022</span>
-                  <a href="/downloads/bsc/math/2022-differential-calculus.pdf" class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                  <span class="text-sm text-gray-600">May 2022 ( Available ) </span>
+                  <div class="space-x-2">
+                    <a href="https://archive.org/details/maths-101-th-2022-hpexamhub" 
+                      target="_blank"
+                      class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
+                      View Online
+                    </a>
+                    <a href="https://archive.org/download/maths-101-th-2022-hpexamhub/maths-101-th-2022-hpexamhub.pdf" 
+                      class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
+                      Download
+                    </a>
+                  </div>
                 </div>
               </div>
               
