--- a/papers/college/bsc-1-maths.html
+++ b/papers/college/bsc-1-maths.html
@@ -126,7 +126,7 @@
               <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                 <h4 class="font-medium mb-2">2022 Question Paper</h4>
                 <div class="flex justify-between items-center">
-                  <span class="text-sm text-gray-600">May 2022 ( Available ) </span>
+                  <span class="text-sm text-gray-600">May 2022</span>
                   <div class="space-x-2">
                     <a href="https://archive.org/details/maths-101-th-2022-hpexamhub" 
                       target="_blank"
