--- a/papers/college/bsc-1-maths.html
+++ b/papers/college/bsc-1-maths.html
@@ -133,7 +133,7 @@
                       class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
                       View Online
                     </a>
-                    <a href="https://archive.org/download/maths-101-th-2022-hpexamhub/maths-101-th-2022-hpexamhub.pdf" 
+                    <a href="https://archive.org/download/maths-101-th-2022-hpexamhub/Maths%20101TH%20-%202022%20%28%20hpexamhub%20%29.pdf" 
                       class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
                       Download
                     </a>
