paper added 2022 moder physics

--- a/papers/college/bsc-3-physics.html
+++ b/papers/college/bsc-3-physics.html
@@ -27,9 +27,10 @@
         <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 text-sm sm:text-base">
           <a href="/" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Home</a>
           <a href="/papers/previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt. Exam Papers</a>
-          <a href="/papers/college-previous-year.html" class="bg-blue-700 px-2 py-1 rounded font-medium">College Papers</a>
+          <a href="/papers/college-previous-year.html" class="bg-blue-700 px-2 py-1 rounded font-medium">College Exam Papers</a>
           <a href="/exams/entrance.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Entrance Exams</a>
-          <a href="/notifications/govt.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Notifications</a>
+          <a href="/notifications/govt.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt Notifications</a>
+          <a href="/about.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">About Us</a>
         </nav>
       </div>
     </header>
@@ -111,6 +112,7 @@
           <div class="mb-8">
             <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Elements of Modern Physics (PHYS301TH)</h3>
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+
               <!-- 2025 Paper -->
               <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                 <h4 class="font-medium mb-2">2025 Question Paper</h4>
@@ -148,14 +150,24 @@
                 </div>
               </div>
               
-              <!-- 2022 Paper -->
-              <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
-                <h4 class="font-medium mb-2">2022 Question Paper</h4>
-                <div class="flex justify-between items-center">
-                  <span class="text-sm text-gray-600">May 2022</span>
-                  <a href="/downloads/bsc/physics/2022-modern-physics.pdf" class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+             <!-- 2022 Paper -->
+            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+            <h4 class="font-medium mb-2">2022 Question Paper</h4>
+            <div class="flex justify-between items-center">
+                <span class="text-sm text-gray-600">May 2022</span>
+                <div class="space-x-2">
+                <a href="https://archive.org/details/elements-of-moderm-physics-2022-hpexamhub.in" 
+                    target="_blank"
+                    class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
+                    View Online
+                </a>
+                <a href="https://archive.org/download/elements-of-moderm-physics-2022-hpexamhub.in/Elements%20of%20Moderm%20physics%20-2022%20%28hpexamhub.in%29.pdf" 
+                    class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
+                    Download
+                </a>
                 </div>
-              </div>
+            </div>
+            </div>
               
               <!-- 2021 Paper -->
               <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
