all papers added physics Elements 2025

--- a/papers/college/bsc-3-physics.html
+++ b/papers/college/bsc-3-physics.html
@@ -120,12 +120,20 @@
           <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
 
             <!-- 2025 Paper -->
-            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
+            <<div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
               <h4 class="font-medium mb-2">2025 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">April 2025</span>
-                <a href="/downloads/bsc/physics/2025-modern-physics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <div class="space-x-2">
+                  <a href="https://archive.org/details/elements-of-moderm-physics-2025-hpexamhub.in" target="_blank"
+                    class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
+                    View Online
+                  </a>
+                  <a href="https://archive.org/download/elements-of-moderm-physics-2025-hpexamhub.in/Elements%20of%20Moderm%20physics%202025%20%28%20hpexamhub.in%20%29.pdf"
+                    class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
+                    Download
+                  </a>
+                </div>
               </div>
             </div>
 
@@ -151,9 +159,17 @@
             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
               <h4 class="font-medium mb-2">2023 Question Paper</h4>
               <div class="flex justify-between items-center">
-                <span class="text-sm text-gray-600">Dec 2023</span>
-                <a href="/downloads/bsc/physics/2023-modern-physics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="text-sm text-gray-600">April 2023</span>
+                <div class="space-x-2">
+                  <a href="https://archive.org/details/elements-of-moderm-physics-2023-hpexamhub.in" target="_blank"
+                    class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
+                    View Online
+                  </a>
+                  <a href="https://archive.org/download/elements-of-moderm-physics-2023-hpexamhub.in/Elements%20of%20Moderm%20physics%202023%20%28%20hpexamhub.in%20%29.pdf"
+                    class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
+                    Download
+                  </a>
+                </div>
               </div>
             </div>
 
