google anamytics implementation

--- a/404.html
+++ b/404.html
@@ -45,5 +45,7 @@
   <footer class="bg-gray-900 text-white pt-8 pb-6">
     <!-- ... (copy from your main site) ... -->
   </footer>
+<!-- Load Analytics Dynamically -->
+<script src="/assets/load-analytics.js"></script>
 </body>
 </html>
