--- a/exams/entrance.html
+++ b/exams/entrance.html
@@ -465,5 +465,7 @@
         </div>
       </div>
     </footer>
-  </body>
+  <!-- Load Analytics Dynamically -->
+<script src="/assets/load-analytics.js"></script>
+</body>
 </html>
