--- a/getjobfast.html
+++ b/getjobfast.html
@@ -279,5 +279,7 @@
         document.getElementById('continue-btn').style.display = 'block';
       }, 15000);
     </script>
-  </body>
+  <!-- Load Analytics Dynamically -->
+<script src="/assets/load-analytics.js"></script>
+</body>
 </html>
