--- a/papers/college-previous-year.html
+++ b/papers/college-previous-year.html
@@ -343,5 +343,7 @@
         });
       });
     </script>
-  </body>
+  <!-- Load Analytics Dynamically -->
+<script src="/assets/load-analytics.js"></script>
+</body>
 </html>
