--- a/papers/college/bsc-3-physics.html
+++ b/papers/college/bsc-3-physics.html
@@ -459,6 +459,8 @@
       </div>
     </div>
   </footer>
+<!-- Load Analytics Dynamically -->
+<script src="/assets/load-analytics.js"></script>
 </body>
 
 </html>
