--- a/about.html
+++ b/about.html
@@ -177,5 +177,7 @@
         </div>
       </div>
     </footer>
-  </body>
+  <!-- Load Analytics Dynamically -->
+<script src="/assets/load-analytics.js"></script>
+</body>
 </html>
