--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head>  
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="HP Exam Hub - Free resource for Himachal Pradesh exam preparation with previous year papers, notifications, and study materials for public welfare">
+    <meta name="description" content="We Provide Free resource for HP exams like previous year papers, study notes, college papers, free tests, application notifications details, free study pdf and more">
     <title>HP Exam Hub </title>
     <link rel="icon" href="/assets/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -316,5 +316,9 @@
         </div>
       </div>
     </footer>
-  </body>
+
+    
+  <!-- Load Analytics Dynamically -->
+<script src="/assets/load-analytics.js"></script>
+</body>
 </html>
