--- a/papers/college/bsc-1-maths.html
+++ b/papers/college/bsc-1-maths.html
@@ -300,5 +300,7 @@
         </div>
       </div>
     </footer>
-  </body>
+  <!-- Load Analytics Dynamically -->
+<script src="/assets/load-analytics.js"></script>
+</body>
 </html>
