--- a/papers/previous-year.html
+++ b/papers/previous-year.html
@@ -463,5 +463,7 @@
         </div>
       </div>
     </footer>
-  </body>
+  <!-- Load Analytics Dynamically -->
+<script src="/assets/load-analytics.js"></script>
+</body>
 </html>
