header and footer jav script

--- a/papers/college/bsc-3-physics.html
+++ b/papers/college/bsc-3-physics.html
@@ -16,27 +16,7 @@
 <body class="bg-gray-100 text-gray-800 font-nunito">
 
   <!-- Header -->
-  <header class="bg-blue-600 text-white shadow sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto p-4 flex flex-col sm:flex-row justify-between items-center">
-      <div class="flex items-center mb-4 sm:mb-0">
-        <a href="/" class="flex items-center">
-          <img src="/assets/logo.png" alt="HP Exam Hub Logo" class="h-10 mr-3">
-          <h1 class="text-2xl font-bold">HP Exam Hub</h1>
-        </a>
-      </div>
-      <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 text-sm sm:text-base">
-        <a href="/" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Home</a>
-        <a href="/papers/previous-year.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt. Exam
-          Papers</a>
-        <a href="/papers/college-previous-year.html" class="bg-blue-700 px-2 py-1 rounded font-medium">College Exam
-          Papers</a>
-        <a href="/exams/entrance.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Entrance Exams</a>
-        <a href="/notifications/govt.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">Govt
-          Notifications</a>
-        <a href="/about.html" class="hover:underline px-2 py-1 rounded hover:bg-blue-700">About Us</a>
-      </nav>
-    </div>
-  </header>
+  <div id="header-placeholder"></div>
 
   <!-- Breadcrumbs -->
   <div class="max-w-7xl mx-auto px-4 py-4 text-sm">
@@ -411,54 +391,9 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-white pt-12 pb-6">
-    <div class="max-w-7xl mx-auto px-4">
-      <div class="grid md:grid-cols-4 gap-8 mb-8">
-        <div>
-          <h3 class="text-lg font-semibold mb-4">HP Exam Hub</h3>
-          <p class="text-gray-400">A public welfare initiative providing free exam resources to Himachal Pradesh
-            aspirants since 2023.</p>
-        </div>
-
-        <div>
-          <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
-          <ul class="space-y-2">
-            <li><a href="/" class="text-gray-400 hover:text-white transition">Home</a></li>
-            <li><a href="/papers/" class="text-gray-400 hover:text-white transition">Previous Papers</a></li>
-            <li><a href="/exams/" class="text-gray-400 hover:text-white transition">Exam Categories</a></li>
-            <li><a href="/notifications/" class="text-gray-400 hover:text-white transition">Notifications</a></li>
-          </ul>
-        </div>
-
-        <div>
-          <h3 class="text-lg font-semibold mb-4">Support</h3>
-          <ul class="space-y-2">
-            <li><a href="/about.html" class="text-gray-400 hover:text-white transition">About Us</a></li>
-            <li><a href="/contact.html" class="text-gray-400 hover:text-white transition">Contact</a></li>
-            <li><a href="/volunteer.html" class="text-gray-400 hover:text-white transition">Volunteer</a></li>
-            <li><a href="/donate.html" class="text-gray-400 hover:text-white transition">Donate</a></li>
-          </ul>
-        </div>
-
-        <div>
-          <h3 class="text-lg font-semibold mb-4">Connect With Us</h3>
-          <div class="flex space-x-4">
-            <a href="https://youtube.com/hpexamhub" class="text-gray-400 hover:text-white transition">
-              <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z" />
-              </svg>
-            </a>
-          </div>
-          <p class="text-gray-400 text-sm mt-2">Subscribe for video solutions</p>
-        </div>
-      </div>
-
-      <div class="border-t border-gray-800 pt-6 text-center text-gray-400 text-sm">
-        <p>&copy; 2025 HP Exam Hub. All content is provided for educational purposes only.</p>
-      </div>
-    </div>
-  </footer>
+  <div id="footer-placeholder"></div>
+   <!-- Include the component loader -->
+  <script src="/load-components.js"></script>
 <!-- Load Analytics Dynamically -->
 <script src="/assets/load-analytics.js"></script>
 </body>
