--- a/papers/college-previous-year.html
+++ b/papers/college-previous-year.html
@@ -22,7 +22,7 @@
     <section class="bg-gradient-to-r from-blue-600 to-blue-800 text-white py-12 text-center">
       <div class="max-w-4xl mx-auto px-4">
         <h1 class="text-3xl sm:text-4xl font-bold mb-4">College Previous Year Papers</h1>
-        <p class="text-lg sm:text-xl mb-6">Free question papers for HP University, PU, and other affiliated colleges</p>
+        <p class="text-lg sm:text-xl mb-6">Free question papers for HP University and other colleges</p>
       </div>
     </section>
 
@@ -57,7 +57,8 @@
                 <div class="bg-white p-4 rounded-lg shadow hover:shadow-md transition">
                   <h3 class="font-semibold text-lg mb-2 text-blue-800">BSc 1st Year</h3>
                   <ul class="space-y-2">
-                    <li><a href="/papers/college/bsc-1-maths.html" class="text-blue-600 hover:underline">Mathematics</a></li>
+                    <li><a href="/papers/college/bsc-1-maths.html" class="text-blue-600 hover:underline">Mathematics</a>
+                    <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">Available</span> </li> 
                     <li><a href="/papers/college/bsc-1-physics.html" class="text-blue-600 hover:underline">Physics</a></li>
                     <li><a href="/papers/college/bsc-1-chemistry.html" class="text-blue-600 hover:underline">Chemistry</a></li>
                     <li><a href="/papers/college/bsc-1-botany.html" class="text-blue-600 hover:underline">Botany</a></li>
@@ -223,18 +224,6 @@
           </div>
         </div>
 
-        <!-- University Filter -->
-        <div class="mt-12 bg-blue-50 p-6 rounded-xl">
-          <h2 class="text-xl font-bold text-blue-800 mb-4">Filter by University</h2>
-          <div class="flex flex-wrap gap-3">
-            <a href="/papers/hpu.html" class="bg-white px-4 py-2 rounded-lg shadow hover:bg-blue-100 transition">HP University</a>
-            <a href="/papers/cskshimla.html" class="bg-white px-4 py-2 rounded-lg shadow hover:bg-blue-100 transition">CSK Shimla</a>
-            <a href="/papers/sanskrit.html" class="bg-white px-4 py-2 rounded-lg shadow hover:bg-blue-100 transition">Sanskrit University</a>
-            <a href="/papers/private.html" class="bg-white px-4 py-2 rounded-lg shadow hover:bg-blue-100 transition">Private Colleges</a>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- How to Use Section -->
     <section class="py-12 bg-gray-50">
