--- a/papers/college-previous-year.html
+++ b/papers/college-previous-year.html
@@ -83,7 +83,8 @@
                   <h3 class="font-semibold text-lg mb-2 text-blue-800">BSc 3rd Year</h3>
                   <ul class="space-y-2">
                     <li><a href="/papers/college/bsc-3-maths.html" class="text-blue-600 hover:underline">Mathematics</a></li>
-                    <li><a href="/papers/college/bsc-3-physics.html" class="text-blue-600 hover:underline">Physics</a></li>
+                    <li><a href="/papers/college/bsc-3-physics.html" class="text-blue-600 hover:underline">Physics</a> 
+                    <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">Available</span> </li>
                     <li><a href="/papers/college/bsc-3-chemistry.html" class="text-blue-600 hover:underline">Chemistry</a></li>
                     <li><a href="/papers/college/bsc-3-botany.html" class="text-blue-600 hover:underline">Botany</a></li>
                     <li><a href="/papers/college/bsc-3-zoology.html" class="text-blue-600 hover:underline">Zoology</a></li>
