added available soon

--- a/papers/college/bsc-3-physics.html
+++ b/papers/college/bsc-3-physics.html
@@ -97,9 +97,10 @@
         <!-- Modern Physics Papers -->
         <div class="mb-8">
           <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Elements of Modern Physics (PHYS301TH)
-            <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">All Available</span></h3> 
+            <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">All Available</span>
+          </h3>
 
-        
+
           <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
 
             <!-- 2025 Paper -->
@@ -240,8 +241,9 @@
               <h4 class="font-medium mb-2">2025 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">May 2025</span>
-                <a href="/downloads/bsc/physics/2025-nuclear-physics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+                  Coming Soon
+                </span>
               </div>
             </div>
 
@@ -250,8 +252,9 @@
               <h4 class="font-medium mb-2">2024 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">May 2024</span>
-                <a href="/downloads/bsc/physics/2024-nuclear-physics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+                  Coming Soon
+                </span>
               </div>
             </div>
 
@@ -260,8 +263,9 @@
               <h4 class="font-medium mb-2">2023 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">Dec 2023</span>
-                <a href="/downloads/bsc/physics/2023-nuclear-physics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+                  Coming Soon
+                </span>
               </div>
             </div>
 
@@ -270,8 +274,9 @@
               <h4 class="font-medium mb-2">2022 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">May 2022</span>
-                <a href="/downloads/bsc/physics/2022-nuclear-physics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+                  Coming Soon
+                </span>
               </div>
             </div>
 
@@ -280,8 +285,9 @@
               <h4 class="font-medium mb-2">2021 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">Dec 2021</span>
-                <a href="/downloads/bsc/physics/2021-nuclear-physics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+                  Coming Soon
+                </span>
               </div>
             </div>
           </div>
@@ -296,8 +302,9 @@
               <h4 class="font-medium mb-2">2025 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">May 2025</span>
-                <a href="/downloads/bsc/physics/2025-quantum-mechanics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+  Coming Soon
+</span>
               </div>
             </div>
 
@@ -306,8 +313,9 @@
               <h4 class="font-medium mb-2">2024 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">May 2024</span>
-                <a href="/downloads/bsc/physics/2024-quantum-mechanics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+  Coming Soon
+</span>
               </div>
             </div>
 
@@ -316,8 +324,9 @@
               <h4 class="font-medium mb-2">2023 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">Dec 2023</span>
-                <a href="/downloads/bsc/physics/2023-quantum-mechanics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+  Coming Soon
+</span>
               </div>
             </div>
 
@@ -326,8 +335,9 @@
               <h4 class="font-medium mb-2">2022 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">May 2022</span>
-                <a href="/downloads/bsc/physics/2022-quantum-mechanics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+  Coming Soon
+</span>
               </div>
             </div>
 
@@ -336,8 +346,9 @@
               <h4 class="font-medium mb-2">2021 Question Paper</h4>
               <div class="flex justify-between items-center">
                 <span class="text-sm text-gray-600">Dec 2021</span>
-                <a href="/downloads/bsc/physics/2021-quantum-mechanics.pdf"
-                  class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">Download</a>
+                <span class="bg-gray-100 text-gray-500 text-sm px-3 py-1 rounded border border-gray-300">
+  Coming Soon
+</span>
               </div>
             </div>
           </div>
@@ -395,10 +406,10 @@
 
   <!-- Footer -->
   <div id="footer-placeholder"></div>
-   <!-- Include the component loader -->
+  <!-- Include the component loader -->
   <script src="/load-components.js"></script>
-<!-- Load Analytics Dynamically -->
-<script src="/assets/load-analytics.js"></script>
+  <!-- Load Analytics Dynamically -->
+  <script src="/assets/load-analytics.js"></script>
 </body>
 
 </html>
